<resources>
    <string name="app_name">HNGProfile</string>
    <string name="action_settings">Settings</string>
    <string name="profile_head">Profile\t: </string>
    <string name="github">Github\t:</string>
    <string name="twitter">Twitter\t:</string>
    <string name="slack">Slack\t:</string>
    <string name="profile_details"><b>Thadeus Adetola Ajayi</b> \n
        Associate Android Developer (Google Certified) | Web Developer.Creative and entrepreneurial software technologist.\n Soft background in the arts, Law diploma and a Bachelors in Social Sciences. I have a great knack and intuition towards IT and IT related fields.
    </string>
    <string name="twitter_details">https://twitter.com/ShopSpreeNg</string>
    <string name="github_details">https://github.com/ThadeusAjayi</string>
    <string name="slack_details">https://hnginterns.slack.com/team/ainojie</string>

    <string name="git"><u><i>thadeusajayi</i></u></string>
    <string name="slak"><u><i>@ainojie</i></u></string>
    <string name="twit"><u><i>@shopspreeng</i></u></string>
</resources>
