<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shopspreeng.android.hngprofile.MainActivity"
    tools:showIn="@layout/activity_main">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/slack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/items">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/slack"
            style="@style/textHead"/>

        <TextView
            android:id="@+id/slack_detail"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            style="@style/textDetail"
            android:text="@string/twitter_details" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/items"
        android:layout_below="@id/slack">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/github"
            style="@style/textHead"/>

        <TextView
            android:id="@+id/github_detail"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            style="@style/textDetail"
            android:text="@string/github_details"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/items"
        android:layout_below="@id/github">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            style="@style/textHead"/>

        <TextView
            android:id="@+id/twitter_detail"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            style="@style/textDetail"
            android:text="@string/twitter_details"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/items"
        android:layout_below="@id/twitter">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/profile_head"
            style="@style/textHead"/>

        <TextView
            android:id="@+id/profile_detail"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            style="@style/textDetail"
            android:text="@string/profile_details"/>

    </LinearLayout>



</RelativeLayout>

</android.support.v4.widget.NestedScrollView>